# MyMoney-Backend

./: .gitignore  main.py  pyproject.toml  render.yaml  requirements.txt  test.ipynb
backend/: chatbot.py  expense.py  main.py  memory.py  visuals.py
database/: expense.db  memory.db  render.yaml
